<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/google_plus_id"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/logo_google_plus"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:text="@string/google"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/facebook_id"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:clickable="true"
            android:padding="16dp"
            android:src="@drawable/logo_facebook"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:text="@string/facebook"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vk_com_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/logo_vk"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:text="@string/vk_com"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>