<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/fragment_toolbar_back_search"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <android.support.v7.widget.CardView
                                android:id="@+id/linear_frame_title_discount"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="4dp"
                                card_view:cardBackgroundColor="@color/gray_bottom_create_card"
                                card_view:cardCornerRadius="0dp"
                                card_view:cardElevation="4dp">

                                <include layout="@layout/fragment_edit_name"/>

                                <TextView
                                    android:id="@+id/title_show_discount"
                                    android:layout_width="match_parent"
                                    android:layout_height="48dp"
                                    android:gravity="center|center"
                                    android:text="@string/name"
                                    android:textColor="@color/text_toolbar"
                                    android:textSize="18sp"/>
                            </android.support.v7.widget.CardView>

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">

                                <ImageView
                                    android:id="@+id/type_card"
                                    android:layout_width="100dp"
                                    android:layout_height="56dp"
                                    android:layout_gravity="center"/>

                            </FrameLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <!--<LinearLayout-->
                                <!--android:layout_width="100dp"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:orientation="vertical"-->
                                <!--android:padding="8dp">-->
                                <!---->
                                <!--<TextView-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="48dp"-->
                                <!--android:gravity="center|end"-->
                                <!--android:text="@string/cardholder_"-->
                                <!--android:textColor="@color/text_toolbar"-->
                                <!--android:textSize="16sp"/>-->
                                <!---->
                                <!--<TextView-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="48dp"-->
                                <!--android:gravity="center|end"-->
                                <!--android:text="@string/number_"-->
                                <!--android:textColor="@color/text_toolbar"-->
                                <!--android:textSize="16sp"/>-->
                                <!---->
                                <!--<TextView-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="48dp"-->
                                <!--android:gravity="center|end"-->
                                <!--android:text="@string/pin_"-->
                                <!--android:textColor="@color/text_toolbar"-->
                                <!--android:textSize="16sp"/>-->
                                <!---->
                                <!---->
                                <!--<TextView-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="48dp"-->
                                <!--android:gravity="center|end"-->
                                <!--android:text="@string/verification_nnumber"-->
                                <!--android:textColor="@color/text_toolbar"-->
                                <!--android:textSize="12sp"/>-->
                                <!---->
                                <!--<TextView-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="48dp"-->
                                <!--android:gravity="center|end"-->
                                <!--android:text="@string/valid_n_thru"-->
                                <!--android:textColor="@color/text_toolbar"-->
                                <!--android:textSize="12sp"/>-->
                                <!---->
                                <!--<TextView-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="48dp"-->
                                <!--android:gravity="center|end"-->
                                <!--android:text="@string/valid_n_thru"-->
                                <!--android:textColor="@color/text_toolbar"-->
                                <!--android:textSize="12sp"/>-->
                                <!---->
                                <!--</LinearLayout>-->
                                <!---->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:paddingBottom="8dp"
                                    android:paddingEnd="16dp"
                                    android:paddingStart="16dp"
                                    android:paddingTop="8dp">

                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

                                        <EditText
                                            android:id="@+id/cardholder"
                                            android:layout_width="match_parent"
                                            android:layout_height="48dp"
                                            android:enabled="false"
                                            android:gravity="center|start"
                                            android:hint="@string/cardholder"
                                            android:inputType="text"
                                            android:maxLines="1"
                                            android:textAllCaps="true"
                                            android:textColor="@color/text_toolbar"
                                            android:textSize="16sp"
                                            android:text="@string/cardholder"/>

                                    </android.support.design.widget.TextInputLayout>

                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="8dp">

                                        <EditText
                                            android:id="@+id/number"
                                            android:layout_width="match_parent"
                                            android:layout_height="48dp"
                                            android:enabled="false"
                                            android:gravity="center|start"
                                            android:hint="@string/number"
                                            android:inputType="number"
                                            android:textColor="@color/text_toolbar"
                                            android:textSize="16sp"
                                            android:text="0000 0000 0000 0000"/>

                                    </android.support.design.widget.TextInputLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="48dp"
                                        android:layout_marginTop="8dp">

                                        <android.support.design.widget.TextInputLayout
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1">

                                            <EditText
                                                android:id="@+id/pin"
                                                android:layout_width="match_parent"
                                                android:layout_height="48dp"
                                                android:enabled="false"
                                                android:gravity="center|start"
                                                android:hint="@string/pin"
                                                android:inputType="numberPassword"
                                                android:textColor="@color/text_toolbar"
                                                android:textSize="16sp"
                                                android:text="0000"/>

                                        </android.support.design.widget.TextInputLayout>

                                        <FrameLayout
                                            android:layout_width="48dp"
                                            android:layout_height="48dp"
                                            android:onClick="onShowPinClicked">

                                            <ImageView
                                                android:id="@+id/eye"
                                                android:layout_width="24dp"
                                                android:layout_height="24dp"
                                                android:layout_gravity="center"
                                                android:background="?attr/selectableItemBackgroundBorderless"
                                                android:src="@drawable/eye_on"/>

                                        </FrameLayout>
                                    </LinearLayout>

                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="8dp">

                                        <EditText
                                            android:id="@+id/ver_number"
                                            android:layout_width="match_parent"
                                            android:layout_height="48dp"
                                            android:enabled="false"
                                            android:gravity="center|start"
                                            android:hint="@string/verification_number"
                                            android:imeOptions="actionDone"
                                            android:inputType="number"
                                            android:textColor="@color/text_toolbar"
                                            android:textSize="16sp"
                                            android:text="000 00"/>

                                    </android.support.design.widget.TextInputLayout>

                                    <android.support.v7.widget.CardView
                                        android:layout_width="match_parent"
                                        android:layout_height="48dp"
                                        android:layout_gravity="start"
                                        android:layout_marginBottom="4dp"
                                        android:layout_marginEnd="4dp"
                                        android:layout_marginStart="4dp"
                                        android:layout_marginTop="4dp"
                                        android:layout_weight="1"
                                        card_view:cardCornerRadius="2dp"
                                        card_view:cardElevation="2dp">

                                        <com.maxcriser.cards.view.labels.RobotoThin
                                            android:id="@+id/date"
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:layout_gravity="center"
                                            android:layout_margin="4dp"
                                            android:clickable="false"
                                            android:gravity="center"
                                            android:onClick="onDateClicked"
                                            android:textColor="@color/text_toolbar"
                                            android:textSize="18sp"/>

                                    </android.support.v7.widget.CardView>


                                </LinearLayout>

                            </LinearLayout>

                            <include layout="@layout/fragment_show_photos"/>

                            <LinearLayout
                                android:id="@+id/linear_frame_actions_discount"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:orientation="horizontal"
                                android:visibility="gone">

                                <include layout="@layout/fragment_cancel_save"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </FrameLayout>

        </ScrollView>

    </LinearLayout>

    <include layout="@layout/floating_menu_show"/>

</merge>